# website-admin

./: README.en.md  README.ja.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
backend/: .pylintrc  Dockerfile  Dockerfile.base  Pipfile  backup_20251021_152303.json  manage.py  migrations_before.txt  requirements.txt
backend-fastapi/: .gitignore  .pylintrc  database.py  main.py  models.py  pyproject.toml  requirements.txt
backend-fastapi/app/: main.py
backend-fastapi/app/core/: config.py
backend-fastapi/app/db/: base.py
backend-fastapi/app/models/: user.py
backend/api/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
backend/blog/: settings.py  urls.py  wsgi.py
backend/website/: settings.py  urls.py  wsgi.py
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  eslint.config.mjs  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/.husky/: pre-commit
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppSidebar.tsx  CategoryDialog.tsx  DataTable.tsx  DelayedFallback.tsx  GalleryCard.tsx  Header.tsx  ImagesPage.tsx  InputList.tsx  Layout.tsx  LocaleSwitcher.tsx  LoginForm.tsx  MarkdownEditor.tsx  ModeToggle.tsx  NavSecondary.tsx  NavUser.tsx  PasswordInput.tsx  PieChart.tsx  PostForm.tsx  ProjectForm.tsx  SkillDialog.tsx  theme-provider.tsx
frontend/hooks/: use-window-size.ts  useOSSDelete.ts
frontend/i18n/: config.ts  navigations.ts  request.ts
frontend/lib/: auth.ts  constants.ts  date-format.ts  (+6 more)
(+159 files in other folders)
